src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ARS_Monetary_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ARS Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUD_Monetary_Threshold__c</fullName>
        <label>AUD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BHD_Monetary_Threshold__c</fullName>
        <label>BHD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOB_Monetary_Threshold__c</fullName>
        <label>BOB Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRL_Monetary_Threshold__c</fullName>
        <label>BRL Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BYR_Monetary_Threshold__c</fullName>
        <label>BYR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BZD_Monetary_Threshold__c</fullName>
        <label>BZD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Monetary_Threshold__c</fullName>
        <label>CAD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHF_Monetary_Threshold__c</fullName>
        <label>CHF Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLP_Monetary_Threshold__c</fullName>
        <label>CLP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNY_Monetary_Threshold__c</fullName>
        <label>CNY Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COP_Monetary_Threshold__c</fullName>
        <label>COP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRC_Monetary_Threshold__c</fullName>
        <label>CRC Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZK_Monetary_Threshold__c</fullName>
        <label>CZK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_Language__c</fullName>
        <label>Comment Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Germany - Prof</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese-BR</fullName>
                </value>
                <value>
                    <fullName>Slovac Republic</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish-EU</fullName>
                </value>
                <value>
                    <fullName>Spanish-LA</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <label>Contact Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMR BR</fullName>
                </value>
                <value>
                    <fullName>AMR DPIC</fullName>
                </value>
                <value>
                    <fullName>AMR LA SY</fullName>
                </value>
                <value>
                    <fullName>AMR NA</fullName>
                </value>
                <value>
                    <fullName>AMR NA Crisis Full</fullName>
                </value>
                <value>
                    <fullName>AMR NA CVG</fullName>
                </value>
                <value>
                    <fullName>AMR NA PSS</fullName>
                </value>
                <value>
                    <fullName>AMR NA SY</fullName>
                </value>
                <value>
                    <fullName>AMR WST</fullName>
                </value>
                <value>
                    <fullName>China P&amp;G</fullName>
                </value>
                <value>
                    <fullName>China Sykes</fullName>
                </value>
                <value>
                    <fullName>China TCI</fullName>
                </value>
                <value>
                    <fullName>Crisis BR Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis CN Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Brazil</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - China</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - France</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Germany</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Japan</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - Korea</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center – Nordics</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - UK</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Center - US</fullName>
                </value>
                <value>
                    <fullName>Crisis Contact Centre – Southern Europe</fullName>
                </value>
                <value>
                    <fullName>Crisis DE Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis ES Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis FI Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis FR Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis GB Contact Center</fullName>
                </value>
                <value>
                    <fullName>Crisis GR Contact Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DKK_Monetary_Threshold__c</fullName>
        <label>DKK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EGP_Monetary_Threshold__c</fullName>
        <label>EGP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_Monetary_Threshold__c</fullName>
        <label>EUR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBP_Monetary_Threshold__c</fullName>
        <label>GBP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTQ_Monetary_Threshold__c</fullName>
        <label>GTQ Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HKD_Monetary_Threshold__c</fullName>
        <label>HKD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNL_Monetary_Threshold__c</fullName>
        <label>HNL Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRK_Monetary_Threshold__c</fullName>
        <label>HRK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUF_Monetary_Threshold__c</fullName>
        <label>HUF Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDR_Monetary_Threshold__c</fullName>
        <label>IDR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILS_Monetary_Threshold__c</fullName>
        <label>ILS Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INR_Monetary_Threshold__c</fullName>
        <label>INR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISK_Monetary_Threshold__c</fullName>
        <label>ISK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JPY_Monetary_Threshold__c</fullName>
        <label>JPY Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KES_Monetary_Threshold__c</fullName>
        <label>KES Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KHR_Monetary_Threshold__c</fullName>
        <label>KHR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPW_Monetary_Threshold__c</fullName>
        <label>KPW Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KRW_Monetary_Threshold__c</fullName>
        <label>KRW Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KWD_Monetary_Threshold__c</fullName>
        <label>KWD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KZT_Monetary_Threshold__c</fullName>
        <label>KZT Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAK_Monetary_Threshold__c</fullName>
        <label>LAK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBP_Monetary_Threshold__c</fullName>
        <label>LBP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LYD_Monetary_Threshold__c</fullName>
        <label>LYD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>118.KZ Almaty Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Accenture Newcastle UK</fullName>
                </value>
                <value>
                    <fullName>Adecco Cincinnati US</fullName>
                </value>
                <value>
                    <fullName>Alta Neenah US</fullName>
                </value>
                <value>
                    <fullName>Alta Neenah US Connect</fullName>
                </value>
                <value>
                    <fullName>Apex Cordoba Argentina</fullName>
                </value>
                <value>
                    <fullName>Apex Cordoba Argentina Connect</fullName>
                </value>
                <value>
                    <fullName>Apex San Pedro Sula Honduras</fullName>
                </value>
                <value>
                    <fullName>Apex San Pedro Sula Honduras Connect</fullName>
                </value>
                <value>
                    <fullName>Apex Sao Paulo Brazil</fullName>
                </value>
                <value>
                    <fullName>Apex Sao Paulo Brazil Connect</fullName>
                </value>
                <value>
                    <fullName>C3i Horsham US</fullName>
                </value>
                <value>
                    <fullName>Connections Consult Bucharest Romania</fullName>
                </value>
                <value>
                    <fullName>ConSol Lagos Nigeria</fullName>
                </value>
                <value>
                    <fullName>Convergys Jacksonville US (Beauty)</fullName>
                </value>
                <value>
                    <fullName>Convergys Jacksonville US (Clairol French)</fullName>
                </value>
                <value>
                    <fullName>DPIC Clifton US</fullName>
                </value>
                <value>
                    <fullName>Ignite Cincinnati US</fullName>
                </value>
                <value>
                    <fullName>Infosys OffShore India</fullName>
                </value>
                <value>
                    <fullName>Ipsos Johannesburg South Africa</fullName>
                </value>
                <value>
                    <fullName>Lingaro Warsaw Poland</fullName>
                </value>
                <value>
                    <fullName>New Moment Belgrade Serbia</fullName>
                </value>
                <value>
                    <fullName>NewPoint Moscow Russia</fullName>
                </value>
                <value>
                    <fullName>Olympic Shavers Nottingham UK</fullName>
                </value>
                <value>
                    <fullName>PFSweb Cincinnati US</fullName>
                </value>
                <value>
                    <fullName>PG Athens Greece</fullName>
                </value>
                <value>
                    <fullName>PG Bangkok Thailand</fullName>
                </value>
                <value>
                    <fullName>PG Boston US</fullName>
                </value>
                <value>
                    <fullName>PG Brussels Belgium</fullName>
                </value>
                <value>
                    <fullName>PG Bucharest Romania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAD_Monetary_Threshold__c</fullName>
        <label>MAD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMK_Monetary_Threshold__c</fullName>
        <label>MMK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MXN_Monetary_Threshold__c</fullName>
        <label>MXN Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYR_Monetary_Threshold__c</fullName>
        <label>MYR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monetary_Threshold__c</fullName>
        <description>Assigned Fulfillment Order Threshold</description>
        <label>Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NGN_Monetary_Threshold__c</fullName>
        <label>NGN Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NIO_Monetary_Threshold__c</fullName>
        <label>NIO Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOK_Monetary_Threshold__c</fullName>
        <label>NOK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NZD_Monetary_Threshold__c</fullName>
        <label>NZD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMR_Monetary_Threshold__c</fullName>
        <label>OMR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAB_Monetary_Threshold__c</fullName>
        <label>PAB Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEN_Monetary_Threshold__c</fullName>
        <label>PEN Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHP_Monetary_Threshold__c</fullName>
        <label>PHP Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKR_Monetary_Threshold__c</fullName>
        <label>PKR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLN_Monetary_Threshold__c</fullName>
        <label>PLN Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PYG_Monetary_Threshold__c</fullName>
        <label>PYG Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QAR_Monetary_Threshold__c</fullName>
        <label>QAR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RON_Monetary_Threshold__c</fullName>
        <label>RON Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUB_Monetary_Threshold__c</fullName>
        <label>RUB Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Language__c</fullName>
        <description>Region/Language groups used for automatic assignment of a user to a public group of the same name.</description>
        <inlineHelpText>Region/Language groups used for automatic assignment of a user to a public group of the same name.</inlineHelpText>
        <label>Region Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA - English</fullName>
                </value>
                <value>
                    <fullName>AA - Indonesian</fullName>
                </value>
                <value>
                    <fullName>AA - Malay</fullName>
                </value>
                <value>
                    <fullName>AA - Tagalog</fullName>
                </value>
                <value>
                    <fullName>AA - Thai</fullName>
                </value>
                <value>
                    <fullName>AA - Vietnamese</fullName>
                </value>
                <value>
                    <fullName>ASIA - Chinese-S</fullName>
                </value>
                <value>
                    <fullName>ASIA - Chinese-T</fullName>
                </value>
                <value>
                    <fullName>ASIA - English</fullName>
                </value>
                <value>
                    <fullName>ASIA - Japanese</fullName>
                </value>
                <value>
                    <fullName>ASIA - Korean</fullName>
                </value>
                <value>
                    <fullName>BR - All</fullName>
                </value>
                <value>
                    <fullName>DEM - Malta</fullName>
                </value>
                <value>
                    <fullName>EU - Croatian</fullName>
                </value>
                <value>
                    <fullName>EU - Czech</fullName>
                </value>
                <value>
                    <fullName>EU - Danish</fullName>
                </value>
                <value>
                    <fullName>EU - Dutch</fullName>
                </value>
                <value>
                    <fullName>EU - Dutch Promotions</fullName>
                </value>
                <value>
                    <fullName>EU - English</fullName>
                </value>
                <value>
                    <fullName>EU - English Discovery</fullName>
                </value>
                <value>
                    <fullName>EU - English Promotions</fullName>
                </value>
                <value>
                    <fullName>EU - English SCC</fullName>
                </value>
                <value>
                    <fullName>EU - English Team B</fullName>
                </value>
                <value>
                    <fullName>EU - English Team C</fullName>
                </value>
                <value>
                    <fullName>EU - Estonian</fullName>
                </value>
                <value>
                    <fullName>EU - Finnish</fullName>
                </value>
                <value>
                    <fullName>EU - Flemish</fullName>
                </value>
                <value>
                    <fullName>EU - French</fullName>
                </value>
                <value>
                    <fullName>EU - French Promotions</fullName>
                </value>
                <value>
                    <fullName>EU - German</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAR_Monetary_Threshold__c</fullName>
        <label>SAR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEK_Monetary_Threshold__c</fullName>
        <label>SEK Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGD_Monetary_Threshold__c</fullName>
        <label>SGD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVC_Monetary_Threshold__c</fullName>
        <label>SVC Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THB_Monetary_Threshold__c</fullName>
        <label>THB Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TND_Monetary_Threshold__c</fullName>
        <label>TND Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRY_Monetary_Threshold__c</fullName>
        <label>TRY Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TWD_Monetary_Threshold__c</fullName>
        <label>TWD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAH_Monetary_Threshold__c</fullName>
        <label>UAH Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Monetary_Threshold__c</fullName>
        <label>USD Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UYU_Monetary_Threshold__c</fullName>
        <label>UYU Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VEF_Monetary_Threshold__c</fullName>
        <label>VEF Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VND_Monetary_Threshold__c</fullName>
        <label>VND Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1STOP_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow the user to approve 1STOP requests</inlineHelpText>
        <label>1STOP Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YER_Monetary_Threshold__c</fullName>
        <label>YER Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZAR_Monetary_Threshold__c</fullName>
        <label>ZAR Monetary Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AAI_GoLive07_12_2017</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAI GoLive07.12.2017</value>
        </filters>
        <label>AAI GoLive07.12.2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive11_20_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive11.20.2016</value>
        </filters>
        <label>AAI GoLive11.20.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive4_10_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive4.10.2016</value>
        </filters>
        <label>AAI GoLive4.10.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive7_18_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <label>AAI GoLive7.18.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive7_27_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive7.27.2016</value>
        </filters>
        <label>AAI GoLive7.27.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive8_25_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive8.25.2016</value>
        </filters>
        <label>AAI GoLive8.25.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive8_4_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive8.4.2016</value>
        </filters>
        <label>AAI GoLive8.4.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive9_16_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAIGoLive9.16.2016</value>
        </filters>
        <label>AAI GoLive9.16.2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AAI_GoLive_TBD</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Contact_Center__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>AAI GoLiveTBD</value>
        </filters>
        <label>AAI GoLive TBD</label>
        <language>en_US</language>
    </listViews>
</CustomObject>